2008-10-31  Michael Natterer  <mitch@gimp.org>

	* app/actions/text-tool-actions.c
	* app/actions/text-tool-commands.c: add missing includes and
	remove unused variable.

2008-10-31  Sven Neumann  <sven@gimp.org>

	* configure.in: also check for freetype2 when checking for
	pangocairo. Should fix the build on systems where the FT2 include
	path is not included otherwise.

2008-10-31  Sven Neumann  <sven@gimp.org>

	* configure.in: lowered minimum required version of Cairo to 1.6.0.

2008-10-31  Sven Neumann  <sven@gimp.org>

	* INSTALL: 
	* configure.in: removed checks for PangoFT2.

	* app/config/Makefile.am
	* app/text/Makefile.am
	* app/Makefile.am: removed use of PANGOFT2_CFLAGS and PANGOFT2_LIBS.

2008-10-31  Sven Neumann  <sven@gimp.org>

	* app/text/gimpfont.c
	* app/text/gimpfontlist.c: render font previews using PangoCairo.

2008-10-31  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped minimum required version of Cairo to 1.6.4.

	* app/core/gimpscanconvert.c: use cairo_format_stride_for_width().

2008-10-31  Martin Nordholts  <martinn@svn.gnome.org>

	* app/gegl/gimpoperationpointlayermode.c
	(gimp_operation_point_layer_mode_process): Formating,
	simplification and fixed operator precedence for the seed (not
	that it matters much).

2008-10-31  Martin Nordholts  <martinn@svn.gnome.org>

	* app/gegl/gimpoperationpointlayermode.c
	(gimp_operation_point_layer_mode_process): The GEGL API actually
	allows us to handle the Dissolve layer mode as a point op. The
	GEGL implementation of Dissolve uses a faster implementation for
	deterministic behavior than the legacy Dissolve implementation.
	The end result should be identical (although not on the
	pixel-level).

	Completely works the same:
	 o Dissolve

2008-10-31  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimptexttool.c (gimp_text_tool_key_press): bail out
	instead of crashing if the tool has no display.

	(gimp_text_tool_draw)
	(gimp_text_tool_draw_preedit)
	(gimp_text_tool_draw_selection)