@@ -1,5 +1,14 @@
 2008-10-31  Michael Natterer  <mitch@gimp.org>
 
+	* app/tools/gimpdrawtool.[ch]: add gimp_draw_tool_draw_text_cursor()
+	which draws a properly transformed cursor that always has the same
+	line width.
+
+	* app/tools/gimptexttool.c (gimp_text_tool_draw): use it instead
+	of drawing a cursor here that is broken at anything but 1:1 zoom.
+
+2008-10-31  Michael Natterer  <mitch@gimp.org>
+
 	* app/actions/text-tool-actions.c
 	* app/actions/text-tool-commands.c: add missing includes and
 	remove unused variable.
